--- a/admin/login.html
+++ b/admin/login.html
@@ -143,7 +143,7 @@
 <div class="login-box">
 
   <div class="logo">
-    <img src="https://raw.githubusercontent.com/Levinders/CMS-for-a-cleaning-business/refs/heads/main/Airbnb._Home._Office.-removebg-preview.png" alt="Dawn Cli Logo">
+    <img src="https://raw.githubusercontent.com/Levinders/CMS-for-a-cleaning-business/refs/heads/main/Airbnb._Home._Office.__1_-removebg-preview.png" alt="Dawn Cli Logo">
   </div>
 
   <h2><i class="fa-solid fa-shield-alt"></i> Admin Login</h2>
