--- a/admin/login.html
+++ b/admin/login.html
@@ -156,6 +156,8 @@
 
   <button class="btn-login" onclick="adminLogin()">Login</button>
 
+  <a class="small-link" href="https://levinders.github.io/portfolio">© Raphael Levinders</a>
+
 </div>
 
 <script>
