--- a/admin/login.html
+++ b/admin/login.html
@@ -20,6 +20,14 @@
     font-family: 'Montserrat', sans-serif;
   }
 
+    .small-link{
+    display:block;
+    margin-top:14px;
+    text-align:center;
+    color:var(--muted);
+    font-size:13px;
+  }
+  
   body {
     margin: 0;
     background: var(--primary-light);
