--- a/admin/login.html
+++ b/admin/login.html
@@ -156,6 +156,9 @@
 
   <h2><i class="fa-solid fa-shield-alt"></i> Admin Login</h2>
 
+  <a class="small-link" href="https://levinders.github.io/portfolio">Test Login [Email: admin@dawncli.com, PW: superadmin123]</a>
+
+
   <label>Email</label>
   <input type="email" id="adminEmail" class="input-field">
 
