--- a/admin/login.html
+++ b/admin/login.html
@@ -156,8 +156,6 @@
 
   <h2><i class="fa-solid fa-shield-alt"></i> Admin Login</h2>
 
-  <a class="small-link" href="https://levinders.github.io/portfolio">Test Login [Email: admin@dawncli.com, PW: superadmin123]</a>
-
 
   <label>Email</label>
   <input type="email" id="adminEmail" class="input-field">
@@ -168,6 +166,9 @@
   <button class="btn-login" onclick="adminLogin()">Login</button>
 
   <a class="small-link" href="https://levinders.github.io/portfolio">© Raphael Levinders</a>
+   
+  <a class="small-link">Test login, copy paste: <br/>[Email: admin@dawncli.com], [PW: superadmin123]</a>
+
 
 </div>
 
