--- a/admin/login.html
+++ b/admin/login.html
@@ -167,7 +167,7 @@
 
   <a class="small-link" href="https://levinders.github.io/portfolio">© Raphael Levinders</a>
    
-  <a class="small-link">Test login, copy paste: <br/>[Email: admin@dawncli.com], [PW: superadmin123]</a>
+  <a class="small-link" style="color: #A9A9A9;">Test login, copy paste: <br/>[Email: admin@dawncli.com] <br/> [PW: superadmin123]</a>
 
 
 </div>
