--- a/admin/cleaners.html
+++ b/admin/cleaners.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>HomeGlitz — Cleaners</title>
+  <title>Dawn Cli — Cleaners</title>
   <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Levinders/homeglitz/refs/heads/main/64%C3%9764pxlogo.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -309,7 +309,8 @@
 <body>
   
   <aside class="sidebar" id="sidebar">
-    <div class="brand"><img src="https://raw.githubusercontent.com/Levinders/homeglitz/refs/heads/main/mainlogog-removebg-preview.png"></div>
+    <div class="brand">    <img src="https://raw.githubusercontent.com/Levinders/CMS-for-a-cleaning-business/refs/heads/main/Airbnb._Home._Office.__1_-removebg-preview.png" alt="Dawn Cli Logo">
+</div>
     <ul class="nav-links">
       <li><a href="/homeglitz/others/admin-404-page.html"><i class="fa-solid fa-chart-line"></i> Overview</a></li>
       <li class="nav-item">
