--- a/admin/cleaners.html
+++ b/admin/cleaners.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dawn Cli — Cleaners</title>
-  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Levinders/homeglitz/refs/heads/main/64%C3%9764pxlogo.png" />
+  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Levinders/CMS-for-a-cleaning-business/refs/heads/main/Untitled_design__21_-removebg-preview.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
@@ -312,16 +312,16 @@
     <div class="brand">    <img src="https://raw.githubusercontent.com/Levinders/CMS-for-a-cleaning-business/refs/heads/main/Airbnb._Home._Office.__1_-removebg-preview.png" alt="Dawn Cli Logo">
 </div>
     <ul class="nav-links">
-      <li><a href="/homeglitz/others/admin-404-page.html"><i class="fa-solid fa-chart-line"></i> Overview</a></li>
+      <li><a href="/CMS-for-a-cleaning-business/others/admin-404-page.html"><i class="fa-solid fa-chart-line"></i> Overview</a></li>
       <li class="nav-item">
         <a href="#" id="bookingMenu"><i class="fa-solid fa-broom"></i> Bookings <i class="fa-solid fa-chevron-down" style="margin-left:auto;"></i></a>
         <div class="sub-menu"><a href="booking.html">Create New</a><a href="all-bookings.html">All Bookings</a></div>
       </li>
-      <li><a href="/homeglitz/admin/payments.html"><i class="fa-solid fa-wallet"></i><span> Payments</span></a></li>
-      <li><a href="/homeglitz/others/admin-404-page.html"><i class="fa-solid fa-house-user"></i> Properties</a></li>
-      <li><a href="/homeglitz/admin/cleaners.html" class="active"><i class="fa-solid fa-users"></i> Cleaners</a></li>
-      <li><a href="/homeglitz/others/admin-404-page.html"><i class="fa-solid fa-chart-pie"></i> Reports</a></li>
-      <li><a href="/homeglitz/others/admin-404-page.html"><i class="fa-solid fa-gear"></i> Settings</a></li>
+      <li><a href="/CMS-for-a-cleaning-business/admin/payments.html"><i class="fa-solid fa-wallet"></i><span> Payments</span></a></li>
+      <li><a href="/CMS-for-a-cleaning-business/others/admin-404-page.html"><i class="fa-solid fa-house-user"></i> Properties</a></li>
+      <li><a href="/CMS-for-a-cleaning-business/admin/cleaners.html" class="active"><i class="fa-solid fa-users"></i> Cleaners</a></li>
+      <li><a href="/CMS-for-a-cleaning-business/others/admin-404-page.html"><i class="fa-solid fa-chart-pie"></i> Reports</a></li>
+      <li><a href="/CMS-for-a-cleaning-business/others/admin-404-page.html"><i class="fa-solid fa-gear"></i> Settings</a></li>
     </ul>
   </aside>
 
@@ -434,7 +434,7 @@ document.getElementById("logoutBtn").addEventListener("click", () => {
   document.body.style.opacity = "0";
 
   setTimeout(() => {
-    localStorage.removeItem("homeglitzAdminAuth");
+    localStorage.removeItem("AdminAuth");
     window.location.href = "login.html";
   }, 400);
 });
