--- a/admin/payments.html
+++ b/admin/payments.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>HomeGlitz — Payments</title>
-<link rel="icon" href="https://raw.githubusercontent.com/Levinders/homeglitz/refs/heads/main/64%C3%9764pxlogo.png" />
+<title>Dawn Cli — Payments</title>
+<link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Levinders/CMS-for-a-cleaning-business/refs/heads/main/D-removebg-preview.png" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 
@@ -186,7 +186,7 @@
   main{margin-left:250px;padding:100px 28px 40px}
   .card{background:var(--panel);border-radius:var(--radius);padding:26px;border:1px solid var(--border);box-shadow:var(--shadow)}
   .card__title{font-size:20px;color:var(--primary);font-weight:700;display:flex;align-items:center;gap:12px;border-bottom:2px solid rgba(15,114,180,0.06);padding-bottom:12px;margin-bottom:18px}
-  .controls{position:sticky !important;top:74px !important;z-index:1400 !important;background:transparent !important;padding-bottom:12px}
+  .controls{top:74px !important;z-index:1400 !important;background:transparent !important;padding-bottom:12px}
   .controls-inner{display:flex;align-items:center;gap:12px;justify-content:space-between;margin-bottom:12px}
   .left-controls{display:flex;gap:12px;align-items:center;flex-wrap:wrap}
   .right-controls{display:flex;gap:12px;align-items:center}
@@ -520,11 +520,11 @@
        ========================== -->
   <aside class="sidebar" id="sidebar">
     <div class="brand">
-      <img src="https://raw.githubusercontent.com/Levinders/homeglitz/refs/heads/main/mainlogog-removebg-preview.png">
+      <img src="https://raw.githubusercontent.com/Levinders/CMS-for-a-cleaning-business/refs/heads/main/Airbnb._Home._Office.__2_-removebg-preview.png" alt="Dawn Cli Logo">
     </div>
 
     <ul class="nav-links">
-      <li><a href="/homeglitz/others/admin-404-page.html"><i class="fa-solid fa-chart-line"></i> Overview</a></li>
+      <li><a href="/CMS-for-a-cleaning-business/others/admin-404-page.html"><i class="fa-solid fa-chart-line"></i> Overview</a></li>
 
       <li class="nav-item">
         <a href="#" id="bookingMenu">
@@ -537,11 +537,11 @@
         </div>
       </li>
 
-      <li><a href="/homeglitz/admin/payments.html" class="active"><i class="fa-solid fa-wallet"></i> Payments</a></li>
-      <li><a href="/homeglitz/others/admin-404-page.html"><i class="fa-solid fa-house-user"></i> Properties</a></li>
-      <li><a href="/homeglitz/admin/cleaners.html"><i class="fa-solid fa-users"></i> Cleaners</a></li>
-      <li><a href="/homeglitz/others/admin-404-page.html"><i class="fa-solid fa-chart-pie"></i> Reports</a></li>
-      <li><a href="/homeglitz/others/admin-404-page.html"><i class="fa-solid fa-gear"></i> Settings</a></li>
+      <li><a href="/CMS-for-a-cleaning-business/admin/payments.html" class="active"><i class="fa-solid fa-wallet"></i> Payments</a></li>
+      <li><a href="/CMS-for-a-cleaning-business/admin-404-page.html"><i class="fa-solid fa-house-user"></i> Properties</a></li>
+      <li><a href="/CMS-for-a-cleaning-business/cleaners.html"><i class="fa-solid fa-users"></i> Cleaners</a></li>
+      <li><a href="/CMS-for-a-cleaning-business/others/admin-404-page.html"><i class="fa-solid fa-chart-pie"></i> Reports</a></li>
+      <li><a href="/CMS-for-a-cleaning-business/others/admin-404-page.html"><i class="fa-solid fa-gear"></i> Settings</a></li>
     </ul>
   </aside>
 
