--- a/admin/payments.html
+++ b/admin/payments.html
@@ -784,7 +784,7 @@ document.getElementById("logoutBtn").addEventListener("click", () => {
   Uses your Cloudflare Worker proxy to avoid CORS.
   Worker URL (your proxy): https://homeglitz.raphaellevinders.workers.dev/
 */
-const PROXY = "https://homeglitz.raphaellevinders.workers.dev/";
+const PROXY = "https://base444.raphaellevinders.workers.dev/";
 const pageMsg = document.getElementById('pageMsg');
 const drawerMsg = document.getElementById('drawerMsg');
 
