--- a/admin/booking.html
+++ b/admin/booking.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>HomeGlitz — Admin Booking</title>
-  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Levinders/homeglitz/refs/heads/main/64%C3%9764pxlogo.png" />
+  <title>Dawn Cli — Admin Booking</title>
+  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Levinders/CMS-for-a-cleaning-business/refs/heads/main/D-removebg-preview.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 
@@ -312,11 +312,11 @@
   <!-- ================= SIDEBAR A ================= -->
 <aside class="sidebar" id="sidebar">
   <div class="brand">
-    <img src="https://raw.githubusercontent.com/Levinders/homeglitz/refs/heads/main/mainlogog-removebg-preview.png" alt="HomeGlitz Logo">
+    <img src="https://raw.githubusercontent.com/Levinders/CMS-for-a-cleaning-business/refs/heads/main/Airbnb._Home._Office.__2_-removebg-preview.png" alt="Dawn Cli Logo">
   </div>
 
   <ul class="nav-links">
-    <li><a href="/homeglitz/others/admin-404-page.html"><i class="fa-solid fa-chart-line"></i><span> Overview</span></a></li>
+    <li><a href="/CMS-for-a-cleaning-business/others/admin-404-page.html"><i class="fa-solid fa-chart-line"></i><span> Overview</span></a></li>
 
     <li class="nav-item open">
       <a href="#" id="bookingMenu">
@@ -329,11 +329,11 @@
       </div>
     </li>
 
-    <li><a href="/homeglitz/admin/payments.html"><i class="fa-solid fa-wallet"></i><span> Payments</span></a></li>
-    <li><a href="/homeglitz/others/admin-404-page.html"><i class="fa-solid fa-house"></i><span> Properties</span></a></li>
-    <li><a href="/homeglitz/admin/cleaners.html"><i class="fa-solid fa-users"></i><span> Cleaners</span></a></li>
-    <li><a href="/homeglitz/others/admin-404-page.html"><i class="fa-solid fa-chart-pie"></i><span> Reports</span></a></li>
-    <li><a href="/homeglitz/others/admin-404-page.html"><i class="fa-solid fa-gear"></i><span> Settings</span></a></li>
+    <li><a href="/CMS-for-a-cleaning-business/admin/payments.html"><i class="fa-solid fa-wallet"></i><span> Payments</span></a></li>
+    <li><a href="/CMS-for-a-cleaning-business/others/admin-404-page.html"><i class="fa-solid fa-house"></i><span> Properties</span></a></li>
+    <li><a href="/CMS-for-a-cleaning-business/admin/cleaners.html"><i class="fa-solid fa-users"></i><span> Cleaners</span></a></li>
+    <li><a href="/CMS-for-a-cleaning-business/others/admin-404-page.html"><i class="fa-solid fa-chart-pie"></i><span> Reports</span></a></li>
+    <li><a href="/CMS-for-a-cleaning-business/others/admin-404-page.html"><i class="fa-solid fa-gear"></i><span> Settings</span></a></li>
   </ul>
 </aside>
 
