--- a/admin/all-bookings.html
+++ b/admin/all-bookings.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>HomeGlitz — All Bookings</title>
-  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Levinders/homeglitz/refs/heads/main/64%C3%9764pxlogo.png" />
+  <title>Dawn Cli — All Bookings</title>
+  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Levinders/CMS-for-a-cleaning-business/refs/heads/main/D-removebg-preview.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 
@@ -377,10 +377,10 @@ select.status-select {
   <!-- Sidebar -->
   <aside class="sidebar" id="sidebar">
     <div class="brand">
-      <img src="https://raw.githubusercontent.com/Levinders/homeglitz/refs/heads/main/mainlogog-removebg-preview.png" alt="HomeGlitz Logo">
+    <img src="https://raw.githubusercontent.com/Levinders/CMS-for-a-cleaning-business/refs/heads/main/Airbnb._Home._Office.__2_-removebg-preview.png" alt="Dawn Cli Logo">
     </div>
     <ul class="nav-links">
-      <li><a href="/homeglitz/others/admin-404-page.html"><i class="fa-solid fa-chart-line"></i><span> Overview</span></a></li>
+      <li><a href="/CMS-for-a-cleaning-business/others/admin-404-page.html"><i class="fa-solid fa-chart-line"></i><span> Overview</span></a></li>
       <li class="nav-item open">
         <a href="#" id="bookingMenu"><i class="fa-solid fa-broom"></i><span> Bookings</span><i class="fa-solid fa-chevron-down" style="margin-left:auto;"></i></a>
         <div class="sub-menu" style="display:flex;">
@@ -388,7 +388,7 @@ select.status-select {
           <a href="all-bookings.html" class="active">All Bookings</a>
         </div>
       </li>
-      <li><a href="/homeglitz/admin/payments.html"><i class="fa-solid fa-wallet"></i><span> Payments</span></a></li>
+      <li><a href="/CMS-for-a-cleaning-business/admin/payments.html"><i class="fa-solid fa-wallet"></i><span> Payments</span></a></li>
       <li><a href="others/admin-404-page.html"><i class="fa-solid fa-house"></i><span> Properties</span></a></li>
       <li><a href="cleaners.html"><i class="fa-solid fa-users"></i><span> Cleaners</span></a></li>
       <li><a href="others/admin-404-page.html"><i class="fa-solid fa-chart-pie"></i><span> Reports</span></a></li>
@@ -620,7 +620,7 @@ document.getElementById("logoutBtn").addEventListener("click", () => {
     function hideLoader(){ loader.classList.remove('active'); }
 
     /* ===== API base (your latest endpoint via corsproxy) ===== */
-    const scriptBaseURL = "https://corsproxy.io/?" + encodeURIComponent("https://script.google.com/macros/s/AKfycby6aDtkeVhC7JBFmsNo2ZcpNV__X_T4RVBbIumbVHBxVM55pNmmdy_X741YE2grbjAr/exec");
+    const scriptBaseURL = "https://corsproxy.io/?" + encodeURIComponent("https://script.google.com/macros/s/AKfycbz9VuLJA5ld31QqvUj8CI10wof5fb6COYQ_YbBTA_27S-xu7swMQP0TesxTf63YKtA6qQ/exec");
 
 async function fetchJSON(url) {
   const res = await fetch(url, { cache: 'no-store' });
