--- a/others/admin-404-page.html
+++ b/others/admin-404-page.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>404 — Oops! Wrong Turn | HomeGlitz Admin</title>
+<title>404 — Oops! Wrong Turn | Dawmn Cli Admin</title>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
@@ -142,7 +142,7 @@
   <i class="fa-solid fa-bucket float-icon" style="top:70%; left:78%; animation-delay:3s;"></i>
 
   <div class="wrap">
-    <img class="logo" src="https://raw.githubusercontent.com/Levinders/homeglitz/refs/heads/main/mainlogog-removebg-preview.png" alt="HomeGlitz Logo">
+    <img src="https://raw.githubusercontent.com/Levinders/CMS-for-a-cleaning-business/refs/heads/main/Airbnb._Home._Office.__2_-removebg-preview.png" alt="Dawn Cli Logo">
 
     <h1>404</h1>
 
@@ -158,7 +158,7 @@
 
     <br><br>
 
-    <a href="/homeglitz/admin/all-bookings.html" class="btn">
+    <a href="/CMS-for-a-cleaning-business/admin/all-bookings.html" class="btn">
       <i class="fa-solid fa-arrow-left"></i>
       Back to Bookings
     </a>
