--- a/others/cleaner-invoices.html
+++ b/others/cleaner-invoices.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>HomeGlitz — My Payments</title>
-<link rel="icon" href="https://raw.githubusercontent.com/Levinders/homeglitz/refs/heads/main/64%C3%9764pxlogo.png"/>
+<title>Dawn Cli — My Payments</title>
+  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Levinders/CMS-for-a-cleaning-business/refs/heads/main/D-removebg-preview.png" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 
@@ -118,7 +118,7 @@ tr:hover td { background:#f9fafc; }
 <!-- HEADER -->
 <div class="header">
   <div class="logo">
-    <img src="https://raw.githubusercontent.com/Levinders/homeglitz/refs/heads/main/mainlogog-removebg-preview.png">
+    <img src="https://raw.githubusercontent.com/Levinders/CMS-for-a-cleaning-business/refs/heads/main/Airbnb._Home._Office.__2_-removebg-preview.png" alt="Dawn Cli Logo">
     My Payments
   </div>
 
@@ -150,11 +150,11 @@ tr:hover td { background:#f9fafc; }
 /* ----------------------------------------------------------
    CONFIG
 ----------------------------------------------------------- */
-const WORKER_URL = "https://homeglitz.raphaellevinders.workers.dev/";  // <---- IMPORTANT: replace
+const WORKER_URL = "https://base444.raphaellevinders.workers.dev/";  // <---- IMPORTANT: replace
 
 function redirectToLogin() {
   localStorage.removeItem('homeglitz_cleaner_token');
-  window.location.href = "/homeglitz/cleaner-login.html";
+  window.location.href = "/CMS-for-a-cleaning-business/cleaner-login.html";
 }
 
 /* ----------------------------------------------------------
