--- a/others/coming-soon.html
+++ b/others/coming-soon.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>HomeGlitz — Page Not Found</title>
+<title>Dawn Cli — Page Not Found</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
@@ -91,7 +91,7 @@
 <body>
 
 <div class="wrap">
-  <img src="https://raw.githubusercontent.com/Levinders/homeglitz/refs/heads/main/mainlogog-removebg-preview.png" class="logo" alt="HomeGlitz Logo">
+    <img src="https://raw.githubusercontent.com/Levinders/CMS-for-a-cleaning-business/refs/heads/main/Airbnb._Home._Office.__2_-removebg-preview.png" alt="Dawn Cli Logo">
 
   <h1>Page Not Found</h1>
 
@@ -100,7 +100,7 @@
     Please check back soon.
   </p>
 
-  <a href="/homeglitz/cleaner/portal" class="btn">
+  <a href="/CMS-for-a-cleaning-business/cleaner/portal" class="btn">
     <i class="fa-solid fa-house"></i> Back to Home
   </a>
 </div>
