--- a/cleaner/payments.html
+++ b/cleaner/payments.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>HomeGlitz — Cleaner Payments</title>
+<title>Dawn Cli — Cleaner Payments</title>
 
-<link rel="icon" href="https://raw.githubusercontent.com/Levinders/homeglitz/refs/heads/main/64%C3%9764pxlogo.png"/>
+<link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Levinders/CMS-for-a-cleaning-business/refs/heads/main/D-removebg-preview.png" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 
@@ -155,7 +155,7 @@ tr:hover td{background:#fbfdff}
 
 <header class="header">
   <div class="brand">
-    <img src="https://raw.githubusercontent.com/Levinders/homeglitz/refs/heads/main/mainlogog-removebg-preview.png">
+    <img src="https://raw.githubusercontent.com/Levinders/CMS-for-a-cleaning-business/refs/heads/main/Airbnb._Home._Office.__2_-removebg-preview.png" alt="Dawn Cli Logo>
   </div>
 
   <div class="header-right">
@@ -238,9 +238,9 @@ tr:hover td{background:#fbfdff}
       </div>
 
       <nav>
-        <a href="/homeglitz/cleaner/portal.html"><i class="fa-solid fa-list-check"></i> My Jobs</a>
+        <a href="/CMS-for-a-cleaning-business/cleaner/portal.html"><i class="fa-solid fa-list-check"></i> My Jobs</a>
         <a class="active"><i class="fa-solid fa-wallet"></i> Payments</a>
-        <a href="/homeglitz/others/coming-soon.html"><i class="fa-solid fa-gear"></i> Account</a>
+        <a href="/CMS-for-a-cleaning-business/others/coming-soon.html"><i class="fa-solid fa-gear"></i> Account</a>
       </nav>
     </aside>
 
@@ -248,13 +248,13 @@ tr:hover td{background:#fbfdff}
 </main>
 
 <nav class="bottom-nav">
-  <a href="/homeglitz/cleaner/portal.html"><i class="fa-solid fa-list-check"></i><div style="font-size:12px">Jobs</div></a>
+  <a href="/CMS-for-a-cleaning-business/cleaner/portal.html"><i class="fa-solid fa-list-check"></i><div style="font-size:12px">Jobs</div></a>
   <a class="active"><i class="fa-solid fa-wallet"></i><div style="font-size:12px">Payments</div></a>
-  <a href="/homeglitz/others/coming-soon.html"><i class="fa-solid fa-gear"></i><div style="font-size:12px">Account</div></a>
+  <a href="/CMS-for-a-cleaning-business/others/coming-soon.html"><i class="fa-solid fa-gear"></i><div style="font-size:12px">Account</div></a>
 </nav>
 
 <script>
-const API = "https://homeglitz.raphaellevinders.workers.dev/";
+const API = "https://base444.raphaellevinders.workers.dev/";
 
 let token      = localStorage.getItem("homeglitz_cleaner_token");
 let cleanerId  = localStorage.getItem("homeglitz_cleaner_id");
@@ -262,7 +262,7 @@ let name       = localStorage.getItem("homeglitz_cleaner_name");
 let email      = localStorage.getItem("homeglitz_cleaner_email");
 
 if(!token || !cleanerId){
-  location.href = "/homeglitz/cleaner/login.html";
+  location.href = "/CMS-for-a-cleaning-business/cleaner/login.html";
 }
 
 document.getElementById("cleanerNameTop").textContent = name || "";
@@ -272,7 +272,7 @@ document.getElementById("sideAvatar").textContent = (name||"CL").split(" ").map(
 
 document.getElementById("btnLogout").onclick = () => {
   localStorage.clear();
-  location.href="/homeglitz/cleaner/login.html";
+  location.href="/CMS-for-a-cleaning-business/cleaner/login.html";
 };
 
 function progressStart(){
