--- a/cleaner/payments.html
+++ b/cleaner/payments.html
@@ -159,7 +159,8 @@ tr:hover td{background:#fbfdff}
   </div>
 
   <div class="header-right">
-    <span id="cleanerNameTop" style="font-size:14px;color:var(--muted)"></span>
+    <div id="navAvatar" style="display:none"></div>
+    <div style="font-size:14px;color:var(--muted);" id="cleanerNameTop"></div>
     <button class="btn ghost" id="btnLogout" style="border:1px solid #e6eef8;padding:8px 10px;border-radius:10px;">
       <i class="fa-solid fa-right-from-bracket"></i>
     </button>
