--- a/cleaner/payments.html
+++ b/cleaner/payments.html
@@ -32,7 +32,7 @@ html,body{margin:0;height:100%;background:#f5faff;color:#111;}
 }
 .header .brand{display:flex;align-items:center;gap:12px;color:var(--primary);font-weight:800}
 .header img{height:38px;border-radius:8px}
-.header-right{display:flex;align-items:center;gap:12px}
+.header-right{display:flex;align-items:center;gap:12px;text-align: right}
 
 .page {max-width:var(--max-w);margin:20px auto;padding:0 16px;padding-bottom:80px}
 .grid {display:grid;grid-template-columns:1fr 320px;gap:18px}
