--- a/others/coming-soon.html
+++ b/others/coming-soon.html
@@ -43,9 +43,12 @@
   }
 
   .logo{
-    height:56px;
-    margin-bottom:10px;
+    display:block; gap:10px;
+    margin-bottom:18px;
+    text-align: center;
   }
+
+  .logo img{height:44px;text-align: center;}
 
   h1{
     margin:10px 0;
