--- a/others/coming-soon.html
+++ b/others/coming-soon.html
@@ -42,13 +42,20 @@
     to   { opacity:1; transform:translateY(0); }
   }
 
-  .logo{
-    display:block; gap:10px;
-    margin-bottom:18px;
-    text-align: center;
-  }
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 18px;
+}
 
-  .logo img{height:25px;text-align: center;}
+.logo img {
+  width: auto;
+  max-width: 100%;
+  height: auto;
+  max-height: 40px; /* adjust depending on how tall you want it */
+}
+
 
   h1{
     margin:10px 0;
