--- a/others/coming-soon.html
+++ b/others/coming-soon.html
@@ -50,11 +50,10 @@
 }
 
 .logo img {
+  height: 40px;   /* choose your preferred display height */
   width: auto;
-  max-width: 100%;
-  height: auto;
-  max-height: 40px; /* adjust depending on how tall you want it */
 }
+
 
 
   h1{
