--- a/others/coming-soon.html
+++ b/others/coming-soon.html
@@ -100,8 +100,9 @@
 <body>
 
 <div class="wrap">
+  <div class="logo">
     <img src="https://raw.githubusercontent.com/Levinders/CMS-for-a-cleaning-business/refs/heads/main/Airbnb._Home._Office.__2_-removebg-preview.png" alt="Dawn Cli Logo">
-
+  </div>
   <h1>Page Not Found</h1>
 
   <p>
