--- a/admin/login.html
+++ b/admin/login.html
@@ -165,7 +165,7 @@
 
   <button class="btn-login" onclick="adminLogin()">Login</button>
 
-  <a class="small-link" href="https://levinders.github.io/portfolio">© Raphael Levinders</a>
+  <a class="small-link" href="https://packdez.com">© Packdez</a>
    
   <a class="small-link" style="color: #595555;">Test login, copy paste: <br/>[Email: admin@dawncli.com] <br/> [Password: superadmin123]</a>
 
