--- a/admin/cleaners.html
+++ b/admin/cleaners.html
@@ -390,7 +390,11 @@
       <div class="group"><label>Phone</label><input id="cleanerPhone"></div>
       <div class="group"><label>Password</label><input id="cleanerPassword" type="text"></div>
       <div class="group"><label>Bio / Notes</label><input id="cleanerNotes"></div>
-      <div class="group"><label>Active (Yes/No)</label><input id="cleanerActive"></div>
+      <div class="group"><label>Active (Yes/No)</label><select id="cleanerActive">
+        <option value="Yes">Yes</option>
+        <option value="No">No</option>
+      </select>
+      </div>
 
       <div class="group"><label>Total Jobs</label><input id="cleanerJobs" disabled></div>
       <div class="group"><label>Total Earnings</label><input id="cleanerEarnings" disabled></div>
